--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -5,3 +5,7 @@
     <%= link_to list.name, list_path(list) %>
   <% end %>
 </div>
+
+<%= link_to "Add a List", new_list_path(@list) %>
+
+<%= console %>
